--- a/app/src/main/res/layout/activity_purchase_plan.xml
+++ b/app/src/main/res/layout/activity_purchase_plan.xml
@@ -150,7 +150,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="24dp"
-                android:nestedScrollingEnabled="false"/>
+                android:nestedScrollingEnabled="false"
+                tools:listitem="@layout/layout_package_item_2"/>
 
         </LinearLayout>
 
