--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -208,6 +208,27 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/tv_dmca"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+                        android:clickable="true"
+                        android:text="DMCA"
+                        android:textSize="15sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart"/>
+
+                </LinearLayout>
+                <View
+                    style="@style/Divider" />
+
+                <LinearLayout
+                    android:layout_margin="10dp"
+                    android:padding="5dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
                         android:id="@+id/tv_privacy"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                         android:clickable="true"
