--- a/app/src/main/res/layout/card_genre_home.xml
+++ b/app/src/main/res/layout/card_genre_home.xml
@@ -14,7 +14,9 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp">
 
             <TextView
                 android:padding="10dp"
