--- a/app/src/main/res/layout/card_home_view.xml
+++ b/app/src/main/res/layout/card_home_view.xml
@@ -21,7 +21,7 @@
         <com.balysv.materialripple.MaterialRippleLayout
             android:id="@+id/lyt_parent"
             style="@style/RippleStyleBlack"
-            android:layout_width="116dp"
+            android:layout_width="124dp"
             android:layout_height="wrap_content">
 
             <RelativeLayout
@@ -31,8 +31,9 @@
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:layout_height="162dp"
-                    android:scaleType="centerCrop"
+                    android:layout_height="172dp"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
                     />
                 <!--<ImageView
                     android:layout_centerInParent="true"
