--- a/app/src/main/res/layout/card_subtitle.xml
+++ b/app/src/main/res/layout/card_subtitle.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/lyt_parent"
-    android:background="@color/grey_60"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/dimen_8dp"
+    android:layout_marginEnd="@dimen/dimen_8dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/white"
-        android:padding="3dp"
+        android:textColor="@color/textcolor"
+        android:padding="4dp"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         tools:text="Server Name" />
     <View
+        android:layout_marginTop="@dimen/dimen_4dp"
         android:background="@color/grey_60"
         android:layout_width="wrap_content"
         android:layout_height="1dp"/>
