--- a/app/src/main/res/layout/custom_dialog_subtitle.xml
+++ b/app/src/main/res/layout/custom_dialog_subtitle.xml
@@ -1,38 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:orientation="vertical" >
+    app:cardCornerRadius="0dp"
+    app:cardBackgroundColor="#292929"
+    app:cardElevation="8dp">
 
-   <RelativeLayout
-       android:padding="5dp"
+   <LinearLayout
        android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+       android:layout_height="200dp"
+       android:orientation="vertical" >
 
-      <ImageView
-          android:id="@+id/cancel"
-          android:layout_alignParentRight="true"
-          app:srcCompat="@drawable/ic_cancel"
-          android:textColor="#000"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content" />
-      <TextView
-          android:textSize="16sp"
-          android:textColor="@color/black"
-          android:text="Select subtitle"
-          android:layout_toLeftOf="@+id/cancel"
+      <RelativeLayout
+          android:padding="8dp"
+          android:layout_marginTop="4dp"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content" />
+          android:layout_height="wrap_content">
 
-   </RelativeLayout>
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recyclerView"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+         <ImageView
+             android:layout_marginEnd="8dp"
+             android:id="@+id/cancel"
+             android:layout_alignParentRight="true"
+             app:srcCompat="@drawable/ic_cancel"
+             android:textColor="#000"
+             android:tint="@color/white"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content" />
+         <TextView
+             android:textSize="17sp"
+             android:textColor="@color/colorPrimary"
+             android:text="Select Subtitle"
+             android:layout_toLeftOf="@+id/cancel"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             />
 
-   </androidx.recyclerview.widget.RecyclerView>
+      </RelativeLayout>
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recyclerView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginBottom="8dp"
+          android:padding="8dp"
+          >
+
+      </androidx.recyclerview.widget.RecyclerView>
 
 
 
-</LinearLayout>
+   </LinearLayout>
+</androidx.cardview.widget.CardView>
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="200dp"-->
+<!--    android:background="@color/black"-->
+<!--    android:orientation="vertical" >-->
+
+<!--   <RelativeLayout-->
+<!--       android:padding="8dp"-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="wrap_content">-->
+
+<!--      <ImageView-->
+<!--          android:id="@+id/cancel"-->
+<!--          android:layout_alignParentRight="true"-->
+<!--          app:srcCompat="@drawable/ic_cancel"-->
+<!--          android:textColor="#000"-->
+<!--          android:tint="@color/white"-->
+<!--          android:layout_width="wrap_content"-->
+<!--          android:layout_height="wrap_content" />-->
+<!--      <TextView-->
+<!--          android:textSize="16sp"-->
+<!--          android:textColor="@color/secondaycolor"-->
+<!--          android:text="Select Subtitle"-->
+<!--          android:layout_toLeftOf="@+id/cancel"-->
+<!--          android:layout_width="match_parent"-->
+<!--          android:layout_height="wrap_content"-->
+<!--          />-->
+
+<!--   </RelativeLayout>-->
+<!--   <androidx.recyclerview.widget.RecyclerView-->
+<!--       android:id="@+id/recyclerView"-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="match_parent"-->
+<!--       android:padding="8dp"-->
+<!--       >-->
+
+<!--   </androidx.recyclerview.widget.RecyclerView>-->
+
+
+
+<!--</LinearLayout>-->
