--- a/app/src/main/res/layout/item_grid_image_albums.xml
+++ b/app/src/main/res/layout/item_grid_image_albums.xml
@@ -4,9 +4,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginStart="6dp"
+    android:layout_marginEnd="6dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     app:cardBackgroundColor="@color/black"
     app:cardCornerRadius="5dp">
 
@@ -31,8 +32,9 @@
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:layout_height="162dp"
-                    android:scaleType="centerCrop" />
+                    android:layout_height="172dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY" />
 
 
             </RelativeLayout>
