--- a/app/src/main/res/layout/layout_download_server_dialog.xml
+++ b/app/src/main/res/layout/layout_download_server_dialog.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#292929"
     android:padding="10dp">
 
     <LinearLayout
